# osmid

./: .gitignore  .travis.yml  CMakeLists.txt  INSTALL.md  LICENSE.md  README.md
JuceLibraryCode/: AppConfig.h  JuceHeader.h
JuceLibraryCode/modules/juce_audio_formats/codecs/: juce_MP3AudioFormat.cpp
JuceLibraryCode/modules/juce_audio_formats/format/: juce_AudioFormatWriter.h
JuceLibraryCode/modules/juce_osc/: juce_osc.cpp  juce_osc.h
JuceLibraryCode/modules/juce_osc/osc/: juce_OSCAddress.cpp  juce_OSCAddress.h  juce_OSCArgument.cpp  juce_OSCArgument.h  juce_OSCBundle.cpp  juce_OSCBundle.h  juce_OSCMessage.cpp  juce_OSCMessage.h  juce_OSCReceiver.cpp  juce_OSCReceiver.h  juce_OSCSender.cpp  juce_OSCSender.h  juce_OSCTimeTag.cpp  juce_OSCTimeTag.h  juce_OSCTypes.cpp  juce_OSCTypes.h
external_libs/oscpack_1_1_0/: CMakeLists.txt
external_libs/rtmidi/: RTMIDI_LICENSE
installer/debian/: prepare-debian-package.sh
installer/debian/debian/: control
installer/debian/vagrant/: bootstrap-debian.sh
src/: m2o.cpp  midicommon.cpp  midicommon.h  midiin.cpp  midiin.h  midiinprocessor.cpp  midiinprocessor.h  midiout.cpp  midiout.h  monitorlogger.h  o2m.cpp  osc_sink.h  oscin.cpp  oscin.h  oscinprocessor.cpp  oscinprocessor.h  oscout.cpp  oscout.h  utils.cpp  utils.h  version.h
utils/: check_whitespace.py
